--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,6 +377,7 @@ img {
     border-radius: .25rem;
     font-size: var(--normal-font-size);
     transition: .3s;
+    border: 0;
 }
 
 .button:hover {
@@ -427,12 +428,12 @@ img {
     margin-bottom: 2rem;
 }
 
-/*=============== POPULAR ===============*/
-.popular__container {
+/*=============== PREORDER ===============*/
+.preorder__container {
     padding-top: 1rem;
 }
 
-.popular__card {
+.preorder__card {
     position: relative;
     width: 238px;
     background-color: var(--container-color);
@@ -442,30 +443,30 @@ img {
     overflow: hidden;
 }
 
-.popular__card .shape__smaller {
+.preorder__card .shape__smaller {
     position: absolute;
     top: -2.5rem;
     left: -2.5rem;
 }
 
-.popular__title,
-.popular__subtitle,
-.popular__img {
+.preorder__title,
+.preorder__subtitle,
+.preorder__img {
     position: relative;
 }
 
-.popular__title {
+.preorder__title {
     font-size: var(--h2-font-size);
     margin-bottom: 0.25rem;
 }
 
-.popular__subtitle {
+.preorder__subtitle {
     font-size: var(--normal-font-size);
     color: var(--text-color);
     font-weight: 400;
 }
 
-.popular__img {
+.preorder__img {
     width: 160px;
     margin: 0.75rem 0 1.25rem 0;
     transition: .3s;
@@ -473,14 +474,14 @@ img {
     border-radius: 1rem;
 }
 
-.popular__data {
+.preorder__data {
     display: grid;
     grid-template-columns: repeat(2, max-content);
     gap: .5rem 1.25rem;
     margin-bottom: 2rem;
 }
 
-.popular__data-group {
+.preorder__data-group {
     display: inline-flex;
     align-items: center;
     column-gap: .5rem;
@@ -488,15 +489,15 @@ img {
     columns: var(--white-color);
 }
 
-.popular__data i {
+.preorder__data i {
     font-size: 1rem;
 }
 
-.popular__price {
+.preorder__price {
     font-size: var(--h3-font-size);
 }
 
-.popular__button {
+.preorder__button {
     border: none;
     outline: none;
     padding: .75rem 1rem;
@@ -507,11 +508,11 @@ img {
     cursor: pointer;
 }
 
-.popular__button {
+.preorder__button {
     font-size: 1.25rem;
 }
 
-.popular__card:hover .popular__img {
+.preorder__card:hover .preorder__img {
     transform: translateY(-.25rem);
 }
 
@@ -522,6 +523,50 @@ img {
 
 .swiper-pagination-bullet-active {
     background-color: var(--first-color);
+}
+
+.preorder__social-link {
+    color: var(--text-color);
+    transition: .3s;
+}
+.preorder__social-link:hover {
+    color: var(--title-color);
+}
+
+.preorder__social {
+    display: flex;
+    column-gap: 1.5rem;
+    justify-content: center;
+    margin-bottom: 2.5rem;
+}
+
+.preorder__social-link {
+    font-size: 3.5rem;
+}
+
+/*=============== UNISENDER ===============*/
+.unisender__container {
+    text-align: center;
+}
+
+.unisender__data-group {
+    margin: 1rem 0;
+}
+
+.subscribe-form-item {}
+
+.subscribe-form-item__control--input-email {
+    margin: 1rem 0;
+    padding: 1rem 1rem;
+    border-radius: .25rem;
+    font-size: var(--normal-font-size);
+    transition: .3s;
+    border: 0;
+}
+
+/*=============== SOUNDTRACK ===============*/
+.soundtrack__title {
+    margin: 7rem 0 0 0;
 }
 
 /*=============== FEATURES ===============*/
@@ -590,12 +635,12 @@ img {
     transform: rotate(-22deg);
 }
 
-/*=============== FEATURED ===============*/
-.featured__container {
+/*=============== PRESS ===============*/
+.press__container {
     padding-top: 1rem;
 }
 
-.featured__filters {
+.press__filters {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -603,7 +648,7 @@ img {
     margin-bottom: 3.5rem;
 }
 
-.featured__item {
+.press__item {
     width: 48px;
     height: 48px;
     border: none;
@@ -617,73 +662,73 @@ img {
     transition: .3s;
 }
 
-.featured__item img {
+.press__item img {
     width: 1.5rem;
 }
 
-.featured__item span,
-.featured__item img {
+.press__item span,
+.press__item img {
     opacity: .3;
     transition: .3s;
 }
 
-.featured__item:hover {
+.press__item:hover {
     background-color: var(--first-color);
 }
 
-.featured__item:hover span,
-.featured__item:hover img {
+.press__item:hover span,
+.press__item:hover img {
     opacity: 1;
 }
 
-.featured__content {
+.press__content {
     grid-template-columns: 228px;
     row-gap: 2.5rem;
     justify-content: center;
     margin-top: 3.5rem;
 }
 
-.featured__card {
+.press__card {
     position: relative;
     background-color: var(--container-color);
     padding: 2rem 1.5rem 1.5rem;
     border-radius: 1rem;
 }
 
-.featured__card .shape__smaller {
+.press__card .shape__smaller {
     position: absolute;
     inset: 0;
     margin: auto;
 }
 
-.featured__title,
-.featured__subtitle,
-.featured__img {
+.press__title,
+.press__subtitle,
+.press__img {
     position: relative;
 }
 
-.featured__title {
+.press__title {
     font-size: var(--h2-font-size);
     margin-bottom: .25rem;
 }
 
-.featured__subtitle {
+.press__subtitle {
     font-size: var(--normal-font-size);
     color: var(--text-color);
     font-weight: 400;
 }
 
-.featured__img {
+.press__img {
     width: 180px;
     margin: 1.5rem 0;
     transition: .3s;
 }
 
-.featured__price {
+.press__price {
     font-size: var(--h3-font-size);
 }
 
-.featured__button {
+.press__button {
     border: none;
     outline: none;
     padding: .75rem 1rem;
@@ -694,21 +739,21 @@ img {
     cursor: pointer;
 }
 
-.featured__button i {
+.press__button i {
     font-size: 1.25rem;
 }
 
-.featured__card:hover .featured__img {
+.press__card:hover .press__img {
     transform: translateX(-.25rem);
 }
 
-/* Active link featured */
-.active-featured {
+/* Active link press */
+.active-press {
     background-color: var(--first-color);
 }
 
-.active-featured span,
-.active-featured img {
+.active-press span,
+.active-press img {
     opacity: 1;
 }
 
@@ -941,7 +986,7 @@ img {
         right: 0;
     }
 
-    .featured__content {
+    .press__content {
         grid-template-columns: repeat(2, 228px);
     }
 
@@ -1048,16 +1093,16 @@ img {
         margin-bottom: 3rem;
     }
 
-    .popular__container {
+    .preorder__container {
         width: 875px;
         padding-top: 3rem;
     }
-    .popular__card {
+    .preorder__card {
         width: 258px;
         border-radius: 1.25rem;
         margin-bottom: 5rem;
     }
-    .popular__img {
+    .preorder__img {
         width: 180px;
         margin: .75rem 0 1.25rem 0;
     }
@@ -1087,21 +1132,21 @@ img {
         top: 11rem;
     }
 
-    .featured__container {
+    .press__container {
         padding-bottom: 2.5rem;
     }
-    .featured__filters {
+    .press__filters {
         column-gap: 2rem;
         margin-bottom: 4.5rem;
     }
-    .featured__item {
+    .press__item {
         width: 52px;
         height: 52px;
     }
-    .featured__item img {
+    .press__item img {
         width: 2rem;
     }
-    .featured__content {
+    .press__content {
         grid-template-columns: repeat(3, 248px);
         gap: 4rem;
     }
